--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.3.4",
     "vuepress": "2.0.0-beta.66",
     "vuepress-plugin-search-pro": "2.0.0-beta.235",
+    "vuepress-plugin-umami-analytics": "^1.4.0",
     "vuepress-theme-hope": "2.0.0-beta.235"
   }
 }
