--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -102,6 +102,6 @@ jobs:
       - name: 部署到个人主机
         continue-on-error: true
         run: |
-         sudo chattr -iaR /www/wwwroot/note-book/*
+         sudo chattr -iaR /www/wwwroot/note-book/
          sudo rm -rvf /www/wwwroot/note-book/*
          sudo mv -vf file/* /www/wwwroot/note-book/
