--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.66",
+    "@vuepress/client": "2.0.0-beta.67",
     "nodejs-jieba": "^0.0.2",
     "vue": "^3.3.4",
-    "vuepress": "2.0.0-beta.66",
-    "vuepress-plugin-search-pro": "2.0.0-beta.235",
-    "vuepress-plugin-umami-analytics": "^1.4.0",
-    "vuepress-theme-hope": "2.0.0-beta.235"
+    "vuepress": "2.0.0-beta.67",
+    "vuepress-plugin-search-pro": "2.0.0-beta.238",
+    "vuepress-plugin-umami-analytics": "1.5.0",
+    "vuepress-theme-hope": "2.0.0-beta.238"
   }
 }
