--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notebook",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "notebook by vuepress-theme-hope",
   "license": "MIT",
   "type": "module",
@@ -11,12 +11,21 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
+    "@vue/repl": "^2.6.1",
     "@vuepress/client": "2.0.0-beta.67",
+    "chart.js": "^4.4.0",
+    "echarts": "^5.4.3",
+    "echarts-wordcloud": "^2.1.0",
+    "flowchart.ts": "^1.0.1",
+    "katex": "^0.16.9",
+    "mathjax-full": "^3.2.2",
+    "mermaid": "^10.6.0",
     "nodejs-jieba": "^0.0.2",
-    "vue": "^3.3.4",
+    "reveal.js": "^5.0.0",
+    "vue": "^3.3.7",
     "vuepress": "2.0.0-beta.67",
-    "vuepress-plugin-search-pro": "2.0.0-beta.238",
+    "vuepress-plugin-search-pro": "2.0.0-beta.242",
     "vuepress-plugin-umami-analytics": "1.5.0",
-    "vuepress-theme-hope": "2.0.0-beta.238"
+    "vuepress-theme-hope": "2.0.0-beta.242"
   }
 }
