--- a/package.json
+++ b/package.json
@@ -12,19 +12,13 @@
   },
   "devDependencies": {
     "@vue/repl": "^2.7.0",
-    "@vuepress/client": "2.0.0-beta.68",
-    "chart.js": "^4.4.0",
+    "@vuepress/client": "2.0.0-rc.0",
     "echarts": "^5.4.3",
-    "flowchart.ts": "^1.0.1",
-    "katex": "^0.16.9",
-    "mathjax-full": "^3.2.2",
-    "mermaid": "^10.6.1",
     "nodejs-jieba": "^0.0.2",
-    "reveal.js": "^5.0.2",
     "vue": "^3.3.8",
-    "vuepress": "2.0.0-beta.68",
-    "vuepress-plugin-search-pro": "2.0.0-beta.251",
+    "vuepress": "2.0.0-rc.0",
+    "vuepress-plugin-search-pro": "2.0.0-rc.0",
     "vuepress-plugin-umami-analytics": "1.6.0",
-    "vuepress-theme-hope": "2.0.0-beta.251"
+    "vuepress-theme-hope": "2.0.0-rc.0"
   }
 }
