--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@vue/repl": "^2.7.0",
     "@vuepress/client": "2.0.0-rc.0",
     "echarts": "^5.4.3",
+    "echarts-wordcloud": "^2.1.0",
     "nodejs-jieba": "^0.0.2",
     "vue": "^3.3.8",
     "vuepress": "2.0.0-rc.0",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.0",
     "vuepress-plugin-search-pro": "2.0.0-rc.0",
     "vuepress-plugin-umami-analytics": "1.6.0",
     "vuepress-theme-hope": "2.0.0-rc.0"
