--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vuepress/client": "2.0.0-rc.0",
     "echarts": "^5.4.3",
     "echarts-wordcloud": "^2.1.0",
+    "flowchart.ts": "^1.0.1",
     "nodejs-jieba": "^0.0.2",
     "vue": "^3.3.8",
     "vuepress": "2.0.0-rc.0",
