--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,10 +8,10 @@ updates:
   - package-ecosystem: "npm" 
     directory: "/" 
     schedule:
-      interval: "weekly"
+      interval: "daily"
 
 
   - package-ecosystem: "pip" 
     directory: "/" 
     schedule:
-      interval: "weekly"
+      interval: "daily"
