ci add artifacts build/upload for cloudflare

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -10,7 +10,7 @@ permissions:
   contents: write
 
 jobs:
-  deploy-gh-pages:
+  pre-build:
     runs-on: ubuntu-latest
     steps:
       - name: 拉源码
@@ -44,7 +44,20 @@ jobs:
           node-version: 18
           cache: pnpm
 
+  cloudflare-geekery_cn-pre-build:
+    runs-on: ubuntu-latest
+    needs: pre-build
+    steps:
+      - name: modify
+        run: |-
+          sed -i "s/hostname: "https:\/\/paper-dragon.github.io",/hostname: "https:\/\/www.geekery.cn",/g" src/.vuepress/theme.ts
+          grep hostname src/.vuepress/theme.ts
 
+
+  build-github-pages:
+    runs-on: ubuntu-latest
+    needs: pre-build
+    steps:
       - name: 构建文档
         env:
           NODE_OPTIONS: --max_old_space_size=8192
@@ -60,11 +73,43 @@ jobs:
           # 产物保留时间
           retention-days: 3
 
+  build-geekery_cn-pages:
+    runs-on: ubuntu-latest
+    needs: build-github-pages
+    steps:
+      - name: 构建文档
+        env:
+          NODE_OPTIONS: --max_old_space_size=8192
+        run: |-
+          pnpm run docs:build
+          > src/.vuepress/dist/.nojekyll
+
+      - name: 上传构建产物
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: geekery_cn-artifacts-html
+          path: src/.vuepress/dist/
+          # 产物保留时间
+          retention-days: 3
+
+  deploy-github-page:
+    runs-on: ubuntu-latest
+    steps:
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 这是文档部署到的分支名称
           branch: gh-pages
+          folder: src/.vuepress/dist
+
+  deploy-cloudflare-geekery_cn-page:
+    runs-on: ubuntu-latest
+    steps:
+      - name: 部署文档
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          # 这是文档部署到的分支名称
+          branch: geekery_cn-pages
           folder: src/.vuepress/dist
 
   publish-docker:
@@ -99,6 +144,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/notebook:${{ env.TAGDATE }}
+
   deploy-hosted:
     runs-on: self-hosted
     needs: deploy-gh-pages
