--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -64,6 +64,7 @@ jobs:
           echo ""
 
   build-cloudflare-geekery_cn:
+    needs: check-os
     runs-on: ubuntu-latest
     steps:
       - name: 拉源码
@@ -120,6 +121,7 @@ jobs:
 
   build-github-pages:
     runs-on: ubuntu-latest
+    needs: check-os
     steps:
       - name: 拉源码
         uses: actions/checkout@v3
