ci docker publish no-domain-html version

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -21,6 +21,11 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
+      - name: 更改主机名
+        run: |-
+          sed -i 's/hostname: "https:\/\/paper-dragon.github.io",/hostname: "\/",/g' src/.vuepress/theme.ts
+          grep hostname src/.vuepress/theme.ts
+
       - name: 安装 pnpm
         uses: pnpm/action-setup@v2
         with:
