--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "devDependencies": {
     "@vue/repl": "^3.4.0",
-    "@vuepress/client": "2.0.0-rc.0",
+    "@vuepress/bundler-vite": "2.0.0-rc.2",
     "echarts": "^5.4.3",
     "echarts-wordcloud": "^2.1.0",
     "flowchart.ts": "^3.0.0",
     "nodejs-jieba": "^0.1.2",
     "vue": "^3.4.15",
-    "vuepress": "2.0.0-rc.0",
-    "vuepress-plugin-md-enhance": "2.0.0-rc.11",
-    "vuepress-plugin-search-pro": "2.0.0-rc.11",
+    "vuepress": "2.0.0-rc.2",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.15",
+    "vuepress-plugin-search-pro": "2.0.0-rc.15",
     "vuepress-plugin-umami-analytics": "1.7.0",
-    "vuepress-theme-hope": "2.0.0-rc.11"
+    "vuepress-theme-hope": "2.0.0-rc.15"
   }
 }
