--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "devDependencies": {
     "@vue/repl": "^3.4.0",
-    "@vuepress/bundler-vite": "2.0.0-rc.2",
-    "@vuepress/plugin-redirect": "2.0.0-rc.8",
+    "@vuepress/bundler-vite": "2.0.0-rc.6",
+    "@vuepress/plugin-redirect": "2.0.0-rc.11",
     "echarts": "^5.4.3",
     "echarts-wordcloud": "^2.1.0",
     "flowchart.ts": "^3.0.0",
     "vue": "^3.4.15",
-    "vuepress": "2.0.0-rc.2",
-    "vuepress-plugin-md-enhance": "2.0.0-rc.20",
-    "vuepress-plugin-search-pro": "2.0.0-rc.20",
-    "vuepress-plugin-umami-analytics": "1.7.0",
-    "vuepress-theme-hope": "2.0.0-rc.20"
+    "vuepress": "2.0.0-rc.6",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.22",
+    "vuepress-plugin-search-pro": "2.0.0-rc.22",
+    "vuepress-plugin-umami-analytics": "^1.7.0",
+    "vuepress-theme-hope": "2.0.0-rc.22"
   }
 }
