--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/repl": "^4.1.1",
     "@vuepress/bundler-vite": "2.0.0-rc.8",
     "@vuepress/plugin-redirect": "2.0.0-rc.15",
+    "@waline/client": "^3.1.2",
     "echarts": "^5.5.0",
     "echarts-wordcloud": "^2.1.0",
     "flowchart.ts": "^3.0.0",
