--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@waline/client": "^3.1.2",
     "echarts": "^5.5.0",
     "echarts-wordcloud": "^2.1.0",
-    "flowchart.ts": "^3.0.0",
+    "mermaid": "^10.8.0",
     "vue": "^3.4.19",
     "vuepress": "2.0.0-rc.8",
     "vuepress-plugin-md-enhance": "2.0.0-rc.26",
