--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -158,7 +158,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/notebook:geekery_cn-${{ env.TAGDATE }}
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/notebook:geekery_cn-$(git rev-parse --short HEAD)
+          
 
   run-docker-on-hosted:
     runs-on: self-hosted
@@ -168,8 +169,11 @@ jobs:
       - name: 执行docker命令
         continue-on-error: true
         run: |
-          cat TAG.txt >> $GITHUB_ENV 
-          docker run -it -d -p 32770:80 --restart=always ${{ vars.DOCKERHUB_USERNAME }}/notebook:geekery_cn-${{ env.TAGDATE }}
+          docker pull ${{ vars.DOCKERHUB_USERNAME }}/notebook:geekery_cn-$(git rev-parse --short HEAD)
+
+          cat TAG.txt >> $GITHUB_ENV
+          docker ps | grep 32770 | awk '{print $1}' | docker rm -f
+          docker run -it -d -p 32770:80 --restart=always ${{ vars.DOCKERHUB_USERNAME }}/notebook:geekery_cn-$(git rev-parse --short HEAD)
 
 
 
