--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -136,11 +136,6 @@ jobs:
           # 这是文档部署到的分支名称
           branch: geekery_cn-pages
           folder: src/.vuepress/dist
-
-      
-      - name: 把当前时间放到环境变量里
-        run: echo "TAGDATE=$(date +'%Y-%m-%d-%H-%M')" | tee TAG.txt >> $GITHUB_ENV 
-
       
       - name: 登陆到DockerHub
         uses: docker/login-action@v2
@@ -151,14 +146,15 @@ jobs:
       - name: assets for docker
         run: |
           cp -rvf src/.vuepress/dist ./file
-      
+          echo "TAG=geekery_cn-$(git rev-parse --short HEAD)" >> $GITHUB_ENV 
+
       - name: 构建和推送主域名docker镜像
         uses: docker/build-push-action@v4.1.1
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ vars.DOCKERHUB_USERNAME }}/notebook:geekery_cn-$(git rev-parse --short HEAD)
+          tags: ${{ vars.DOCKERHUB_USERNAME }}/notebook:${{ env.TAG }}
           
 
   run-docker-on-hosted:
