--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts": "^5.5.0",
     "echarts-wordcloud": "^2.1.0",
     "mermaid": "^10.9.1",
+    "vite": "5.2.11",
     "vue": "^3.4.27",
     "vuepress": "2.0.0-rc.12",
     "vuepress-plugin-md-enhance": "2.0.0-rc.45",
