--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   },
   "devDependencies": {
     "@vue/repl": "^4.2.1",
-    "@vuepress/bundler-vite": "2.0.0-rc.13",
+    "@vuepress/bundler-vite": "2.0.0-rc.12",
     "@vuepress/plugin-redirect": "2.0.0-rc.33",
     "@waline/client": "^3.2.1",
+    "chokidar": "^3.6.0",
     "echarts": "^5.5.0",
     "echarts-wordcloud": "^2.1.0",
+    "fs-extra": "^11.2.0",
     "mermaid": "^10.9.1",
     "vite": "5.2.11",
     "vue": "^3.4.27",
-    "vuepress": "2.0.0-rc.13",
+    "vuepress": "2.0.0-rc.12",
     "vuepress-plugin-md-enhance": "2.0.0-rc.47",
     "vuepress-plugin-search-pro": "2.0.0-rc.47",
     "vuepress-theme-hope": "2.0.0-rc.47"
