--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -29,7 +29,7 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           run_install: true
-          version: 8
+          version: 9
 
       - uses: actions/setup-python@v4
         with:
@@ -56,39 +56,18 @@ jobs:
           pnpm run docs:build
           > src/.vuepress/dist/.nojekyll
 
-      - name: 上传构建产物
-        uses: actions/upload-artifact@v3.1.2
-        with:
-          name: no-domain-html
-          path: src/.vuepress/dist/
-          # 产物保留时间
-          retention-days: 3
+      - name: assets for docker
+        run: |
+            cp -rvf src/.vuepress/dist ./file
+            echo "TAGDATE=$(date +'%Y-%m-%d-%H-%M')" >> $GITHUB_ENV
 
-  publish-docker:
-    runs-on: ubuntu-latest
-    needs: build-no-domain
-    steps:
-      - name: 拉源码
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          # 如果你文档需要 Git 子模块，取消注释下一行
-          submodules: true
-        
-      - name: 把当前时间放到环境变量里
-        run: echo "TAGDATE=$(date +'%Y-%m-%d-%H-%M')" >> $GITHUB_ENV
-
-      - name: 下载上一个步骤生成的产物
-        uses: actions/download-artifact@v2.1.1
-        with:
-          name: no-domain-html
-          path: ./file
-
+            
       - name: 登陆到DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
 
       - name: 构建和推送docker镜像
         uses: docker/build-push-action@v4.1.1
