--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@vuepress/plugin-redirect": "2.0.0-rc.38",
     "@waline/client": "^3.3.0",
     "chokidar": "^3.6.0",
+    "dashjs": "^4.7.4",
     "echarts": "^5.5.1",
     "echarts-wordcloud": "^2.1.0",
     "fs-extra": "^11.2.0",
+    "hls.js": "^1.5.13",
     "mermaid": "^10.9.1",
+    "vidstack": "^1.11.29",
     "vite": "5.3.3",
     "vue": "^3.4.32",
     "vuepress": "2.0.0-rc.14",
