--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -114,7 +114,6 @@ jobs:
           sed -i 's/link:.*me.md\",/link: \"https:\/\/cloudflare-cloudnative-pages.geekery.cn\/\",/g' src/.vuepress/navbar.ts
           sed -i 's/address-card/diagram-project/g' src/.vuepress/navbar.ts
           
-
       - name: 构建文档
         env:
           NODE_OPTIONS: --max_old_space_size=8192
@@ -122,14 +121,6 @@ jobs:
           pnpm run docs:build
           > src/.vuepress/dist/.nojekyll
 
-      # - name: 上传构建产物
-      #   uses: actions/upload-artifact@v3.1.2
-      #   with:
-      #     name: geekery_cn-artifacts-html
-      #     path: src/.vuepress/dist/
-      #     # 产物保留时间
-      #     retention-days: 3
-          
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
         with:
@@ -155,20 +146,6 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/notebook:${{ env.TAG }}
-          
-
-  # run-docker-on-hosted:
-  #   runs-on: self-hosted
-  #   needs: build-geekery_cn
-  #   timeout-minutes: 600
-  #   steps:
-  #     - name: 执行docker命令
-  #       continue-on-error: true
-  #       run: |
-  #         docker pull ${{ vars.DOCKERHUB_USERNAME }}/notebook:geekery_cn-${GITHUB_SHA::10}
-  #         docker rm -f ${{ vars.DOCKERHUB_USERNAME }}-notebook
-  #         docker run -it -d -p 32770:80 --restart=always --name=${{ vars.DOCKERHUB_USERNAME }}-notebook ${{ vars.DOCKERHUB_USERNAME }}/notebook:geekery_cn-${GITHUB_SHA::10}
-
 
 
   build-github-pages:
@@ -205,6 +182,17 @@ jobs:
         with:
           node-version: 20
           cache: pnpm
+      
+      - name: 更改主机名
+        run: |-
+          sed -i 's/hostname: "https:\/\/paper-dragon.github.io",/hostname: "https:\/\/www.geekery.cn",/g' src/.vuepress/theme.ts
+          grep hostname src/.vuepress/theme.ts
+      
+      - name: 添加状态页面
+        run: |-
+          sed -i 's/关于我/内容分发网络部署状态/g' src/.vuepress/navbar.ts
+          sed -i 's/link:.*me.md\",/link: \"https:\/\/cloudflare-cloudnative-pages.geekery.cn\/\",/g' src/.vuepress/navbar.ts
+          sed -i 's/address-card/diagram-project/g' src/.vuepress/navbar.ts
 
       - name: 构建文档
         env:
@@ -212,14 +200,6 @@ jobs:
         run: |-
           pnpm run docs:build
           > src/.vuepress/dist/.nojekyll
-
-      # - name: 上传构建产物
-      #   uses: actions/upload-artifact@v3.1.2
-      #   with:
-      #     name: artifacts-html
-      #     path: src/.vuepress/dist/
-      #     # 产物保留时间
-      #     retention-days: 3
           
       - name: 部署文档
         uses: JamesIves/github-pages-deploy-action@v4
@@ -227,23 +207,3 @@ jobs:
           # 这是文档部署到的分支名称
           branch: gh-pages
           folder: src/.vuepress/dist
-
-  # deploy-hosted:
-  #   runs-on: self-hosted
-  #   needs: build-cloudflare-geekery_cn
-  #   timeout-minutes: 600
-  #   steps:
-  #     - name: 下载上一个步骤生成的产物
-  #       uses: actions/download-artifact@v2.1.1
-  #       continue-on-error: true
-  #       timeout-minutes: 180
-  #       with:
-  #         name: geekery_cn-artifacts-html
-  #         path: ./file
-
-  #     - name: 部署到个人主机
-  #       continue-on-error: true
-  #       run: |
-  #         sudo chattr -iaR /opt/1panel/apps/openresty/openresty/www/sites/book.myauth.top/index
-  #         sudo rm -rvf /opt/1panel/apps/openresty/openresty/www/sites/book.myauth.top/index/*
-  #         sudo mv -vf file/* /opt/1panel/apps/openresty/openresty/www/sites/book.myauth.top/index/
