--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -148,62 +148,62 @@ jobs:
           tags: ${{ vars.DOCKERHUB_USERNAME }}/notebook:${{ env.TAG }}
 
 
-  build-github-pages:
-    runs-on: ubuntu-latest
-    needs: check-os
-    steps:
-      - name: 拉源码
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          # 如果你文档需要 Git 子模块，取消注释下一行
-          submodules: true
+  # build-github-pages:
+  #   runs-on: ubuntu-latest
+  #   needs: check-os
+  #   steps:
+  #     - name: 拉源码
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
+  #         # 如果你文档需要 Git 子模块，取消注释下一行
+  #         submodules: true
 
-      - name: 安装 pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          run_install: true
-          version: 9
+  #     - name: 安装 pnpm
+  #       uses: pnpm/action-setup@v4
+  #       with:
+  #         run_install: true
+  #         version: 9
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-          cache: 'pip' # caching pip dependencies
-          cache-dependency-path: "requirements.txt"
+  #     - uses: actions/setup-python@v4
+  #       with:
+  #         python-version: '3.11'
+  #         cache: 'pip' # caching pip dependencies
+  #         cache-dependency-path: "requirements.txt"
 
-      - name: 安装python依赖
-        run: pip install -r requirements.txt
+  #     - name: 安装python依赖
+  #       run: pip install -r requirements.txt
 
-      - name: 生成图云
-        run: python main.py
+  #     - name: 生成图云
+  #       run: python main.py
 
-      - name: 设置 Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-          cache: pnpm
+  #     - name: 设置 Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 20
+  #         cache: pnpm
       
-      - name: 更改主机名
-        run: |-
-          sed -i 's/hostname: "https:\/\/paper-dragon.github.io",/hostname: "https:\/\/www.geekery.cn",/g' src/.vuepress/theme.ts
-          grep hostname src/.vuepress/theme.ts
+  #     - name: 更改主机名
+  #       run: |-
+  #         sed -i 's/hostname: "https:\/\/paper-dragon.github.io",/hostname: "https:\/\/www.geekery.cn",/g' src/.vuepress/theme.ts
+  #         grep hostname src/.vuepress/theme.ts
       
-      - name: 添加状态页面
-        run: |-
-          sed -i 's/关于我/内容分发网络部署状态/g' src/.vuepress/navbar.ts
-          sed -i 's/link:.*me.md\",/link: \"https:\/\/cloudflare-cloudnative-pages.geekery.cn\/\",/g' src/.vuepress/navbar.ts
-          sed -i 's/address-card/diagram-project/g' src/.vuepress/navbar.ts
+  #     - name: 添加状态页面
+  #       run: |-
+  #         sed -i 's/关于我/内容分发网络部署状态/g' src/.vuepress/navbar.ts
+  #         sed -i 's/link:.*me.md\",/link: \"https:\/\/cloudflare-cloudnative-pages.geekery.cn\/\",/g' src/.vuepress/navbar.ts
+  #         sed -i 's/address-card/diagram-project/g' src/.vuepress/navbar.ts
 
-      - name: 构建文档
-        env:
-          NODE_OPTIONS: --max_old_space_size=8192
-        run: |-
-          pnpm run docs:build
-          > src/.vuepress/dist/.nojekyll
+  #     - name: 构建文档
+  #       env:
+  #         NODE_OPTIONS: --max_old_space_size=8192
+  #       run: |-
+  #         pnpm run docs:build
+  #         > src/.vuepress/dist/.nojekyll
           
-      - name: 部署文档
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          # 这是文档部署到的分支名称
-          branch: gh-pages
-          folder: src/.vuepress/dist
+  #     - name: 部署文档
+  #       uses: JamesIves/github-pages-deploy-action@v4
+  #       with:
+  #         # 这是文档部署到的分支名称
+  #         branch: gh-pages
+  #         folder: src/.vuepress/dist
