--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@vue/repl": "^4.4.2",
-    "@vuepress/bundler-vite": "2.0.0-rc.14",
+    "@vuepress/bundler-vite": "2.0.0-rc.15",
     "@waline/client": "^3.3.2",
     "chokidar": "^4.0.0",
     "dashjs": "^4.7.4",
@@ -22,11 +22,12 @@
     "fs-extra": "^11.2.0",
     "hls.js": "^1.5.15",
     "mermaid": "^10.9.1",
-    "vidstack": "^1.12.10",
-    "vue": "^3.5.6",
-    "vuepress": "2.0.0-rc.14",
-    "vuepress-plugin-md-enhance": "2.0.0-rc.51",
-    "vuepress-plugin-search-pro": "2.0.0-rc.51",
-    "vuepress-theme-hope": "2.0.0-rc.51"
+    "sass-embedded": "^1.79.3",
+    "vidstack": "^1.12.11",
+    "vue": "^3.5.7",
+    "vuepress": "2.0.0-rc.15",
+    "vuepress-plugin-md-enhance": "2.0.0-rc.53",
+    "vuepress-plugin-search-pro": "2.0.0-rc.53",
+    "vuepress-theme-hope": "2.0.0-rc.53"
   }
 }
